// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Projects Manuscript Sidebar 1`] = `
.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c8 svg + span {
  margin-left: 4px;
}

.c24 {
  border: none;
  color: #353535;
  padding: 0;
}

.c24 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c9 {
  padding: 0;
  height: 24px;
  width: 24px;
}

.c9 svg g[stroke] {
  stroke: currentColor;
}

.c9 svg path[fill] {
  fill: currentColor;
}

.c9 svg path[stroke] {
  stroke: currentColor;
}

.c9 svg text[fill],
.c9 svg rect[fill],
.c9 svg path[fill] {
  fill: currentColor;
}

.c30 {
  padding: 0;
  height: 40px;
  width: 40px;
}

.c10 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c10:not([disabled]):hover,
.c10:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c10:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c31 {
  background: #fff;
  border: 5px solid #fff !important;
  border-radius: 50%;
  box-sizing: border-box;
  box-shadow: 0 0 8px 0 rgba(0,0,0,0.12);
  display: inline-block;
  height: 40px;
  padding: 0;
  position: relative;
  width: 40px;
  -webkit-transition: border-color 0.25s;
  transition: border-color 0.25s;
}

.c31:focus,
.c31:hover {
  background: #f2fbfc !important;
}

.c31 svg {
  max-height: 16px;
  max-width: 16px;
  vertical-align: middle;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.2em;
  height: 1.3em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 2px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-bottom: 1px solid transparent;
  border-top: 1px solid transparent;
  background: transparent;
  border-color: #f2fbfc;
  color: #353535;
  box-sizing: border-box;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 18px;
  line-height: 30px;
  margin-left: -20px;
  margin-right: -20px;
  overflow-x: hidden;
  padding-right: 20px;
  padding-left: 20px;
  white-space: nowrap;
}

.c18:hover {
  background: #f2fbfc;
}

.c17 {
  font-size: 16px;
  position: relative;
}

.c17 .outline-text-title {
  font-size: 18px;
}

.c20 {
  display: inline-block;
  cursor: pointer;
  border: none;
  background: transparent;
  padding: 0 4px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font-size: 14px;
}

.c20:hover .use[fill='#949494'],
.c20:hover .sc-bFSanr use[fill='#949494'] {
  fill: #ccc;
}

.c20:focus {
  outline: none;
}

.c19 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  overflow-x: hidden;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  height: 100%;
}

.c19:focus,
.c19:active {
  outline: none;
}

.c22 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: inline-block;
  overflow-x: hidden;
  text-overflow: ellipsis;
  margin-left: 8px;
}

.c25 {
  font-size: 14px;
  text-overflow: ellipsis;
  font-size: 14px;
}

.c25 svg {
  margin: 0;
}

.c25 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c25:focus svg path:first-of-type,
.c25:hover svg path:first-of-type {
  fill: #f7b314;
}

.c26 {
  padding-left: 12px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 svg text[fill],
.c11 svg rect[fill],
.c11 svg path[fill] {
  fill: #1a9bc7;
}

.c11 svg path[stroke] {
  stroke: #1a9bc7;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  padding: 16px 8px;
  width: 100%;
  overflow: hidden;
  background: #fafafa;
  border-right: 1px solid #f2f2f2;
}

.c12 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 12px;
  position: relative;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  overflow-y: auto;
}

.c2 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 12px;
  margin-bottom: 24px;
}

.c3 {
  font-size: 20px;
  font-weight: 600;
  color: #353535;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  width: 100%;
}

.c23 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 0 12px;
  margin-top: 16px;
}

.c27 {
  display: block;
  z-index: 2;
  overflow: visible;
  position: absolute;
}

.c27::before {
  content: '';
  position: absolute;
  -webkit-transition: background-color 200ms ease-in-out 100ms;
  transition: background-color 200ms ease-in-out 100ms;
  background: rgb(240,240,240);
}

.c27:hover::before {
  background: #e2e2e2;
}

.c28 {
  cursor: ew-resize;
  top: 0;
  height: 100%;
  width: 16px;
}

.c28::before {
  height: 100%;
  width: 1px;
}

.c29 {
  right: -16px;
}

.c29::before {
  left: -1px;
}

.c32 {
  position: absolute;
  top: 50%;
  margin: -20px;
  line-height: 1;
}

.c14 {
  background: #65a3ff;
  height: 1px;
  z-index: 2;
  width: 100%;
  position: absolute;
}

.c15 {
  top: 0;
  visibility: hidden;
}

.c16 {
  bottom: -1px;
  visibility: hidden;
}

.c13 {
  opacity: 1;
  position: relative;
}

.c4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  padding-right: 4px;
  font-size: 24px;
  line-height: 32px;
}

.c5 .ProseMirror {
  cursor: text;
}

.c5 .ProseMirror:not(.ProseMirror-focused) {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c5 .ProseMirror.empty-node::before {
  position: absolute;
  color: #e2e2e2;
  cursor: text;
  content: 'Untitled Project';
  pointer-events: none;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c5 .ProseMirror.empty-node:hover::before {
  color: #6e6e6e;
}

<div
  className="c0"
>
  <div>
    <div
      style={
        Object {
          "height": "100%",
          "position": "relative",
          "width": 260,
        }
      }
    >
      <div
        className="c1"
        data-cy="sidebar"
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <div
              className="c4"
            >
              <div
                className="c5"
              >
                <div
                  id="project-title-field"
                />
              </div>
              <div
                className="c6"
                onClick={[Function]}
              >
                <div
                  className="c7"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <button
                    aria-label="Share project"
                    className="c8 c9 c10 c11"
                    onClick={[Function]}
                    size={24}
                    type="button"
                  >
                    <svg
                      height={22}
                      viewBox="0 0 16 22"
                      width={16}
                    >
                      <g
                        fill="none"
                        fillRule="evenodd"
                        transform="translate(0 1)"
                      >
                        <path
                          d="M13.5 5.5a2 2 0 012 2v11a2 2 0 01-2 2h-11a2 2 0 01-2-2v-11a2 2 0 012-2h1.78c.494.044.742.293.742.747 0 .456-.25.705-.751.747l-.087.004h7.627l-.064-.002c-.45-.037-.694-.249-.731-.635l-.006-.11c0-.456.246-.706.737-.751H13.5zm-1.487 1.498h-.202l.043.002H3a1 1 0 00-.993.883L2 8v10a1 1 0 001 1h10a1 1 0 001-1V8a1 1 0 00-1-1l-1.08.001.093-.003zm-7.829 0H4l.14.003.044-.003z"
                          fill="#1A9BC7"
                        />
                        <rect
                          fill="#1A9BC7"
                          height={14}
                          rx={0.75}
                          width={1.5}
                          x={7.25}
                          y={1}
                        />
                        <path
                          d="M4.994 3.012L8.01.384l3.015 2.628"
                          stroke="#1A9BC7"
                          strokeLinecap="round"
                          strokeWidth={1.5}
                        />
                      </g>
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c12"
        >
          <div>
            <div
              className="c13"
            >
              <div
                className="c14 c15"
              />
              <div
                className="c14 c16"
              />
            </div>
          </div>
          <div>
            <div
              className="c13"
            >
              <div
                className="c14 c15"
              />
              <div
                className="c17"
              >
                <div
                  className="c18"
                >
                  <a
                    className="c19"
                    href="/projects/project-1/manuscripts/example-2"
                    onClick={[Function]}
                  >
                    <button
                      className="c20"
                    >
                      <svg
                        className=""
                        height={12}
                        viewBox="0 0 12 12"
                        width={12}
                      >
                        <path
                          d="M4.462 1.923l4 4-4 4"
                          fill="none"
                          stroke="#6E6E6E"
                          strokeWidth={2}
                        />
                      </svg>
                    </button>
                    <span
                      className="c21"
                    >
                      <svg
                        height={18}
                        viewBox="0 0 19 18"
                        width={19}
                      >
                        <g
                          fill="#FFBD26"
                        >
                          <path
                            d="M4.5.5h10A2.5 2.5 0 0117 3v12a2.5 2.5 0 01-2.5 2.5h-10A2.5 2.5 0 012 15V3A2.5 2.5 0 014.5.5zm0 1.5a1 1 0 00-1 1v12a1 1 0 001 1h10a1 1 0 001-1V3a1 1 0 00-1-1h-10z"
                          />
                          <path
                            d="M6.25 4h3.5a.75.75 0 010 1.5h-3.5a.75.75 0 010-1.5zm0 1a.25.25 0 100-.5h3.5a.25.25 0 100 .5h-3.5zm0 3h6.5a.75.75 0 110 1.5h-6.5a.75.75 0 010-1.5zm0 1a.25.25 0 100-.5h6.5a.25.25 0 100 .5h-6.5zm0 3h6.5a.75.75 0 110 1.5h-6.5a.75.75 0 110-1.5zm0 1a.25.25 0 100-.5h6.5a.25.25 0 100 .5h-6.5z"
                          />
                        </g>
                      </svg>
                    </span>
                    <span
                      className="c22 outline-text-title"
                    >
                      Two complement receptor one alleles have opposing associations with cerebral malaria and interact with α+thalassaemia
                    </span>
                  </a>
                </div>
              </div>
              <div
                className="c14 c16"
              />
            </div>
          </div>
          <div>
            <div
              className="c13"
            >
              <div
                className="c14 c15"
              />
              <div
                className="c17"
              >
                <div
                  className="c18"
                >
                  <a
                    className="c19"
                    href="/projects/project-1/manuscripts/example-3"
                    onClick={[Function]}
                  >
                    <button
                      className="c20"
                    >
                      <svg
                        className=""
                        height={12}
                        viewBox="0 0 12 12"
                        width={12}
                      >
                        <path
                          d="M4.462 1.923l4 4-4 4"
                          fill="none"
                          stroke="#6E6E6E"
                          strokeWidth={2}
                        />
                      </svg>
                    </button>
                    <span
                      className="c21"
                    >
                      <svg
                        height={18}
                        viewBox="0 0 19 18"
                        width={19}
                      >
                        <g
                          fill="#FFBD26"
                        >
                          <path
                            d="M4.5.5h10A2.5 2.5 0 0117 3v12a2.5 2.5 0 01-2.5 2.5h-10A2.5 2.5 0 012 15V3A2.5 2.5 0 014.5.5zm0 1.5a1 1 0 00-1 1v12a1 1 0 001 1h10a1 1 0 001-1V3a1 1 0 00-1-1h-10z"
                          />
                          <path
                            d="M6.25 4h3.5a.75.75 0 010 1.5h-3.5a.75.75 0 010-1.5zm0 1a.25.25 0 100-.5h3.5a.25.25 0 100 .5h-3.5zm0 3h6.5a.75.75 0 110 1.5h-6.5a.75.75 0 010-1.5zm0 1a.25.25 0 100-.5h6.5a.25.25 0 100 .5h-6.5zm0 3h6.5a.75.75 0 110 1.5h-6.5a.75.75 0 110-1.5zm0 1a.25.25 0 100-.5h6.5a.25.25 0 100 .5h-6.5z"
                          />
                        </g>
                      </svg>
                    </span>
                    <span
                      className="c22 outline-text-title"
                    >
                      Cryo-EM structure of the adenosine A2A receptor coupled to an engineered heterotrimeric G protein
                    </span>
                  </a>
                </div>
              </div>
              <div
                className="c14 c16"
              />
            </div>
          </div>
        </div>
        <div
          className="c23"
        >
          <button
            className="c8 c24 c25"
            onClick={[Function]}
            size="small"
            type="button"
          >
            <svg
              className="AddButton__RegularAddIcon-sc-16tykoq-0"
              height={40}
              viewBox="0 0 32 34"
              width={40}
            >
              <g
                fill="none"
                fillRule="evenodd"
              >
                <path
                  d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
                  fill="#FFBD26"
                />
                <path
                  d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
                  fill="#FFF"
                  stroke="#FFF"
                />
              </g>
            </svg>
            <div
              className="c26"
            >
              New Manuscript
            </div>
          </button>
        </div>
      </div>
      <div
        className="c27 c28 c29"
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          aria-expanded={true}
          className="c8 c30 c10 c31 c32"
          onClick={[Function]}
          onMouseDown={[Function]}
          type="button"
        >
          <svg
            height={12}
            viewBox="0 0 16 12"
            width={16}
          >
            <g
              fill="#6E6E6E"
            >
              <path
                d="M14.983 11.775H4.438a.787.787 0 110-1.574h10.545a.787.787 0 010 1.574zm0-4.939H4.438a.787.787 0 110-1.574h10.545a.787.787 0 010 1.574zm0-4.939H4.438a.787.787 0 110-1.574h10.545a.787.787 0 010 1.574z"
              />
              <circle
                cx={1.057}
                cy={1.171}
                r={1.057}
              />
              <circle
                cx={1.057}
                cy={6.049}
                r={1.057}
              />
              <circle
                cx={1.057}
                cy={10.927}
                r={1.057}
              />
            </g>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Projects Projects Menu 1`] = `
.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c9 svg + span {
  margin-left: 4px;
}

.c10 {
  border: none;
  color: #353535;
  padding: 0;
}

.c10 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c11 {
  font-size: 14px;
  text-overflow: ellipsis;
}

.c11 svg {
  max-height: 28px;
  max-width: 28px;
}

.c11 svg {
  margin: 0;
}

.c11 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c11:focus svg path:first-of-type,
.c11:hover svg path:first-of-type {
  fill: #f7b314;
}

.c12 {
  padding-left: 12px;
}

.c7 {
  color: #6e6e6e;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  color: #353535;
  pointer-events: unset;
}

.c1:hover,
.c1:hover .c6 {
  background: #f2fbfc;
}

.c4 {
  height: 1px;
  width: 100%;
  opacity: 0.23;
  background-color: #bce7f6;
}

.c8 {
  padding: 12px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 12px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  overflow: auto;
}

<div
  className="c0"
>
  <div>
    <a
      aria-current={null}
      className="c1"
      href="/projects"
      onClick={[Function]}
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <svg
            height={26}
            viewBox="0 0 24 26"
            width={24}
          >
            <g
              fill="none"
              fillRule="evenodd"
              stroke="#1A9BC7"
            >
              <path
                d="M8 2.25h12c.966 0 1.75.784 1.75 1.75v14A1.75 1.75 0 0120 19.75H8A1.75 1.75 0 016.25 18V4c0-.966.784-1.75 1.75-1.75z"
                fill="#FFF"
                strokeWidth={1.5}
              />
              <g
                transform="translate(3 7)"
              >
                <rect
                  fill="#FFF"
                  height={17.5}
                  rx={1}
                  strokeWidth={1.5}
                  width={15.5}
                  x={-0.75}
                  y={-0.75}
                />
                <path
                  d="M2.987 2.333a.357.357 0 000 .715h5.286a.357.357 0 000-.715H2.987zm.003 4.834a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99zm0 4.5a.357.357 0 100 .714h8.286a.357.357 0 000-.714H2.99z"
                />
              </g>
            </g>
          </svg>
        </div>
        View All Projects
      </div>
    </a>
    <div
      className="c4"
    />
    <div
      className="c5"
    >
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-3"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div
            className="c6 c7"
          />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-1"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
      <a
        aria-current={null}
        className="c1"
        href="/projects/project-2"
        onClick={[Function]}
      >
        <div
          className="c2"
        >
          <div
            className="c3"
          >
            <svg
              color="#0d79d0"
              height={26}
              viewBox="0 0 24 26"
              width={24}
            >
              <g
                fill="none"
                fillRule="evenodd"
                stroke="#1A9BC7"
                transform="translate(4 3.5)"
              >
                <rect
                  fill="#FFF"
                  height={20}
                  rx={1}
                  width={17}
                  x={-0.5}
                  y={-0.5}
                />
                <path
                  d="M3.176 3.214a.009.009 0 100 .018h5.648a.009.009 0 100-.018H3.176zm0 5.429a.009.009 0 100 .018h9.648a.009.009 0 000-.018H3.176zm0 5.428a.009.009 0 100 .018h9.648a.009.009 0 100-.018H3.176z"
                />
              </g>
            </svg>
          </div>
          <div />
        </div>
      </a>
    </div>
    <div
      className="c4"
    />
    <div
      className="c8"
    >
      <button
        className="c9 c10 c11"
        onClick={[Function]}
        size="default"
        type="button"
      >
        <svg
          className="AddButton__RegularAddIcon-sc-16tykoq-0"
          height={40}
          viewBox="0 0 32 34"
          width={40}
        >
          <g
            fill="none"
            fillRule="evenodd"
          >
            <path
              d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
              fill="#FFBD26"
            />
            <path
              d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
              fill="#FFF"
              stroke="#FFF"
            />
          </g>
        </svg>
        <div
          className="c12"
        >
          New Project
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Projects Projects Page - Empty 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c4 {
  border: none;
  color: #353535;
  padding: 0;
}

.c4 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c5 {
  font-size: 14px;
  text-overflow: ellipsis;
  font-size: 20px;
}

.c5 svg {
  max-height: 40px;
  max-width: 40px;
}

.c5 svg {
  margin: 0;
}

.c5 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c5:focus svg path:first-of-type,
.c5:hover svg path:first-of-type {
  fill: #f7b314;
}

.c6 {
  padding-left: 12px;
}

.c2 {
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 24px;
  text-align: center;
}

.c7 {
  font-weight: 300;
  padding-top: 20px;
  color: #6e6e6e;
}

.c8 {
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  padding-top: 6px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="EmptyProjectPage__Placeholder-sc-1tyx5jc-1"
      >
        <div
          className="c2"
        >
          <canvas
            height={375}
            width={375}
          />
        </div>
      </div>
      <div
        className="EmptyProjectPage__ActionContainer-sc-1tyx5jc-2"
      >
        <button
          className="c3 c4 c5"
          onClick={[Function]}
          size="large"
          type="button"
        >
          <svg
            className="AddButton__RegularAddIcon-sc-16tykoq-0"
            height={40}
            viewBox="0 0 32 34"
            width={40}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
                fill="#FFBD26"
              />
              <path
                d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
                fill="#FFF"
                stroke="#FFF"
              />
            </g>
          </svg>
          <div
            className="c6"
          >
            New Manuscript
          </div>
        </button>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          This project is empty.
        </div>
        <div
          className="c8"
        >
          Create a manuscript to get started.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Projects Projects Page - Empty due to pull error 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c9 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c9:not([disabled]):hover,
.c9:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c9:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c4 {
  border: none;
  color: #353535;
  padding: 0;
}

.c4 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c5 {
  font-size: 14px;
  text-overflow: ellipsis;
  font-size: 20px;
}

.c5 svg {
  max-height: 40px;
  max-width: 40px;
}

.c5 svg {
  margin: 0;
}

.c5 svg path {
  -webkit-transition: fill 0.5s;
  transition: fill 0.5s;
}

.c5:focus svg path:first-of-type,
.c5:hover svg path:first-of-type {
  fill: #f7b314;
}

.c6 {
  padding-left: 12px;
}

.c2 {
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 20px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 24px;
  text-align: center;
}

.c7 {
  font-weight: 300;
  padding-top: 20px;
  color: #6e6e6e;
}

.c8 {
  -webkit-letter-spacing: -0.8px;
  -moz-letter-spacing: -0.8px;
  -ms-letter-spacing: -0.8px;
  letter-spacing: -0.8px;
  padding-top: 6px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="EmptyProjectPage__Placeholder-sc-1tyx5jc-1"
      >
        <div
          className="c2"
        >
          <canvas
            height={375}
            width={375}
          />
        </div>
      </div>
      <div
        className="EmptyProjectPage__ActionContainer-sc-1tyx5jc-2"
      >
        <button
          className="c3 c4 c5"
          onClick={[Function]}
          size="large"
          type="button"
        >
          <svg
            className="AddButton__RegularAddIcon-sc-16tykoq-0"
            height={40}
            viewBox="0 0 32 34"
            width={40}
          >
            <g
              fill="none"
              fillRule="evenodd"
            >
              <path
                d="M20.5 2.278l6 3.464a9 9 0 014.5 7.794v6.928a9 9 0 01-4.5 7.794l-6 3.464a9 9 0 01-9 0l-6-3.464A9 9 0 011 20.464v-6.928a9 9 0 014.5-7.794l6-3.464a9 9 0 019 0z"
                fill="#FFBD26"
              />
              <path
                d="M16.005 8.957a.75.75 0 01.75.75l-.001 6h6.001a.75.75 0 010 1.5h-6.001l.001 6a.75.75 0 01-1.5 0l-.001-6H9.255a.75.75 0 110-1.5h5.999l.001-6a.75.75 0 01.75-.75z"
                fill="#FFF"
                stroke="#FFF"
              />
            </g>
          </svg>
          <div
            className="c6"
          >
            New Manuscript
          </div>
        </button>
      </div>
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          Error while pulling data: there may be manuscripts which are missing locally
        </div>
        <div
          className="c8"
        >
          <button
            className="c3 c9"
            onClick={[Function]}
            type="button"
          >
            Restart sync
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
